--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -22,6 +22,12 @@ li:hover{
   cursor: pointer;
 }
 
+li{
+    float: left;
+    list-style: outside none none;
+
+    padding-left: 5px;
+}
 </style>
 
 <script>
