--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -22,16 +22,28 @@
             ->appendFile($this->basePath('js/jquery.min.js'))
             ->appendFile($this->basePath('js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
             ->appendFile($this->basePath('js/bootstrap.min.js'))
-
+            ->appendFile($this->basePath('js/jquery.cookie'))
             ->appendFile($this->basePath('js/html5shiv.min.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
             ->appendFile($this->basePath('js/frontend.js') ,'text/javascript')
-        ; ?>
-<style>
+
+        ;
+
+        ?>
+        <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script> -->
+
+        <style>
     body{
         margin: 10px;
     }
-
+    .visible{
+      opacity: 0;
+    }
         </style>
+        <script>
+    $.cookie('loggedin','false');
+
+
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -47,6 +59,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                        <li class="active logout visible"><a>Logout</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
